--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -109,12 +109,29 @@ html {
 }
 h1 {
   font-family: 'League Gothic';
-  font-size: 4em;
+  font-size: 3.3em;
   letter-spacing: 0.05em;
   color: ivory;
   text-align: center;
+  @media only screen and (max-width: 300px) {
+    font-size: 16vmin;
+  }
   @include media(tablet) {
     letter-spacing: 0.1em;
+  }
+}
+h2 {
+  font-family: 'League Gothic';
+  font-size: 1.8em;
+  letter-spacing: .05em;
+  @include media(mobile) {
+    margin-top: .3em;
+    padding: 0px;
+  }
+  @include media(tablet) {
+    float: none;
+    text-align: center;
+    margin: 0px;
   }
 }
 #page-splash {
@@ -174,7 +191,12 @@ h1 {
   ul {
     margin-bottom: 1em;
   }
-
+  @include media(mobile) {
+    .columns {
+      padding: 0;
+      margin: 0;
+    }
+  } 
   //program groups
   .blockgrid-li {
     padding: 0;
@@ -182,12 +204,6 @@ h1 {
     background-color: rgba(#222222, 0.75);
     @include media(tablet) {
       background-color: transparent;
-    }
-    @include media(mobile) {
-      .columns {
-        padding: 0;
-        margin: 0;
-      }
     }
   }
 
@@ -222,28 +238,22 @@ h1 {
     color: ivory; 
   }
   h2 {
-    font-family: 'League Gothic';
-    font-size: 1.9em;
-    letter-spacing: .05em;
-    float: left;
-    margin-left: 10px;
-    height: 1em;
-    @include media(mobile) {
-      margin-top: .2em;
-      padding: 0px;
-    }
-    @include media(tablet) {
-      float: none;
-      text-align: center;
-      margin-left: 0px;
-    }
+    clear: both;
+    margin-left: 10px;  
   }
   h5 {
     font-family: 'Droid Sans';
     text-align: center;
     @include media(mobile) {
       margin-bottom: 0px;
-      margin-top: 15px;
+      margin-top: 1em;
+      font-size: 1em;
+      &.margin-shift {
+        margin-top: 0.5em;
+      }
+    }
+    @include media(tablet) {
+      clear: both;
     }
     &.spacer {
       display: none;
@@ -309,8 +319,8 @@ h1 {
 
 }
 .full-width {
- width: 100%;
- margin-left: auto;
- margin-right: auto;
- max-width: initial;
-}
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: initial;
+  }
